[project]
name = "cgs-openhrv"
version = "0.1.0"
description = "Cognitive Guidance System"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyqtgraph>=0.13.7",
    "PySide6 >= 6.10",
    "scipy>=1.13.1",
]

[project.optional-dependencies]
dev = ["snakeviz"]
build = ["pyinstaller"]

[tool.mypy]
check_untyped_defs = true

[project.gui-scripts]
# command line entry points
cgs = "openhrv.OpenHRV:main"
